# Robot_localization

./: README.md
CloudCompare/hpu/: translation_chinese.qm
Recognition/Pointnet(gang)/: cls_acc.txt  cls_mIoU.txt  inc_mIoU.txt  los_acc.txt  test.py  test_acc.txt  test_classification.py  train_acc.txt  train_classification.py  train_cls.py  train_partseg.py
Recognition/Pointnet(gang)/data_utils/: ModelNetDataLoader.py
Recognition/Pointnet(gang)/models/: pointnet2_cls_msg.py  pointnet2_part_seg_ssg.py
Registration/Overlap/: CMakeLists.txt  Overlap.cpp
Registration/Registration/: ICP.py  iss.py  main.py
Registration/Registration/utils/: io.py  visualize.py
SAE+BPNN/BPNN/: BPNN_test.py  BPNN_train.py
SAE+BPNN/BPNN/BPNN/: 666.csv  ALL.csv  ALL_data_generated.csv  BPNN.py  Dataset-test.py  Dataset.py  Dataset1.py  Dataset_1.py  b1.npy  b2.npy  liangangqu_all1.csv  test.csv  test.py  test2.csv  train.csv  w1.npy  w2.npy
SAE+BPNN/BPNN/BPNN/csv_combine_files/: feiliaoqu_combine_reconstructed4.csv  feiliaoqu_combine_reconstructed5.csv  feiliaoqu_combine_reconstructed6.csv  liangangqu_combine_reconstructed3.csv  liangangqu_combine_reconstructed4.csv  liangangqu_combine_reconstructed5.csv  liangangqu_combine_reconstructed6.csv  lianzhuquA_combine_reconstructed3.csv  lianzhuquA_combine_reconstructed4.csv  lianzhuquA_combine_reconstructed5.csv  lianzhuquB_combine_reconstructed3.csv  lianzhuquB_combine_reconstructed4.csv  lianzhuquB_combine_reconstructed5.csv  (+1 more)
SAE+BPNN/SAE/: SAE.py
SAE+BPNN/SAE/csv_files/: liangangqu_all.csv  lianzhuquA_all.csv  lianzhuquB_all.csv
(+35 files in other folders)
